--- a/sass/style.scss
+++ b/sass/style.scss
@@ -122,3 +122,26 @@ body {
         margin: 0 10px 0 0;
     }
 }
+
+/* Tags */
+.tags {
+    a {
+        display: inline
+    }
+}
+
+.tag-size-1 {
+    font-size: 80%
+}
+.tag-size-2 {
+    font-size: 100%
+}
+.tag-size-3 {
+    font-size: 120%
+}
+.tag-size-4 {
+    font-size: 140%
+}
+.tag-size-5 {
+    font-size: 160%
+}
